# SCOTS2C

./: CMakeLists.txt  README.md
data/input/: determinize.sh  domain.sh  generate.sh  pictures.sh  split.sh
data/input/models/aircraft/: Makefile  aircraft.cc
data/input/models/dcdc/: Makefile  dcdc.cc  readme
data/input/models/dcdc_rec/: Makefile  dcdc_rec.cc  readme
data/input/models/dcm/: Makefile  dcm.cc
data/input/models/vehicle/: Makefile  readme  vehicle.cc
data/space/: build.sh  determinize.sh  generate.sh
data/space/models/aircraft/: Makefile  aircraft.cc  readme
data/space/models/dcdc/: Makefile  dcdc.cc
data/space/models/dcdc_rec/: Makefile  dcdc_rec.cc
data/space/models/dcm/: Makefile  dcm.cc  readme
data/space/models/vehicle/: Makefile  readme  vehicle.cc
ext/SCOTSv0.2/src/: SymbolicSet.hh  UniformGrid.hh
ext/cudd-3.0.0/: Makefile  Makefile.in  config.status  configure  libtool  test.cc
ext/cudd-3.0.0/autom4te.cache/: output.0  requests  traces.0
ext/cudd-3.0.0/cplusplus/.deps/: cplusplus_testmulti-testmulti.Po  cplusplus_testobj-testobj.Po  cudd_libcudd_la-cuddObj.Plo
ext/cudd-3.0.0/cudd/.deps/: cudd_libcudd_la-cuddAPI.Plo  cudd_libcudd_la-cuddAddAbs.Plo  cudd_libcudd_la-cuddAddApply.Plo  cudd_libcudd_la-cuddAddFind.Plo  cudd_libcudd_la-cuddAddInv.Plo  cudd_libcudd_la-cuddAddIte.Plo  cudd_libcudd_la-cuddAddNeg.Plo  cudd_libcudd_la-cuddAddWalsh.Plo  cudd_libcudd_la-cuddAndAbs.Plo  cudd_libcudd_la-cuddAnneal.Plo  cudd_libcudd_la-cuddApa.Plo  cudd_libcudd_la-cuddApprox.Plo  cudd_libcudd_la-cuddBddAbs.Plo  cudd_libcudd_la-cuddBddCorr.Plo  cudd_libcudd_la-cuddBddIte.Plo  cudd_libcudd_la-cuddBridge.Plo  cudd_libcudd_la-cuddCache.Plo  cudd_libcudd_la-cuddCheck.Plo  cudd_libcudd_la-cuddClip.Plo  cudd_libcudd_la-cuddCof.Plo  cudd_libcudd_la-cuddCompose.Plo  cudd_libcudd_la-cuddDecomp.Plo  cudd_libcudd_la-cuddEssent.Plo  cudd_libcudd_la-cuddExact.Plo  cudd_libcudd_la-cuddExport.Plo  cudd_libcudd_la-cuddGenCof.Plo  cudd_libcudd_la-cuddGenetic.Plo  cudd_libcudd_la-cuddGroup.Plo  cudd_libcudd_la-cuddHarwell.Plo  cudd_libcudd_la-cuddInit.Plo  cudd_libcudd_la-cuddInteract.Plo  cudd_libcudd_la-cuddLCache.Plo  cudd_libcudd_la-cuddLevelQ.Plo  cudd_libcudd_la-cuddLinear.Plo  cudd_libcudd_la-cuddLiteral.Plo  cudd_libcudd_la-cuddMatMult.Plo  cudd_libcudd_la-cuddPriority.Plo  cudd_libcudd_la-cuddRead.Plo  cudd_libcudd_la-cuddRef.Plo  cudd_libcudd_la-cuddReorder.Plo  (+23 more)
ext/cudd-3.0.0/cudd/.libs/: libcudd-3.0.0.0.dylib
ext/cudd-3.0.0/dddmp/: dddmpNodeBdd.c  dddmpStoreBdd.c
ext/cudd-3.0.0/dddmp/.deps/: cudd_libcudd_la-dddmpBinary.Plo  cudd_libcudd_la-dddmpConvert.Plo  cudd_libcudd_la-dddmpDbg.Plo  cudd_libcudd_la-dddmpLoad.Plo  cudd_libcudd_la-dddmpLoadCnf.Plo  cudd_libcudd_la-dddmpNodeAdd.Plo  cudd_libcudd_la-dddmpNodeBdd.Plo  cudd_libcudd_la-dddmpNodeCnf.Plo  cudd_libcudd_la-dddmpStoreAdd.Plo  cudd_libcudd_la-dddmpStoreBdd.Plo  cudd_libcudd_la-dddmpStoreCnf.Plo  cudd_libcudd_la-dddmpStoreMisc.Plo  cudd_libcudd_la-dddmpUtil.Plo  dddmp_testdddmp-testdddmp.Po
ext/cudd-3.0.0/epd/.deps/: cudd_libcudd_la-epd.Plo
ext/cudd-3.0.0/mtr/.deps/: cudd_libcudd_la-mtrBasic.Plo  cudd_libcudd_la-mtrGroup.Plo  mtr_testmtr-testmtr.Po
ext/cudd-3.0.0/nanotrav/.deps/: nanotrav_nanotrav-bnet.Po  nanotrav_nanotrav-chkMterm.Po  nanotrav_nanotrav-main.Po  nanotrav_nanotrav-ntr.Po  nanotrav_nanotrav-ntrBddTest.Po  nanotrav_nanotrav-ntrHeap.Po  nanotrav_nanotrav-ntrMflow.Po  nanotrav_nanotrav-ntrShort.Po  nanotrav_nanotrav-ntrZddTest.Po
ext/cudd-3.0.0/st/.deps/: cudd_libcudd_la-st.Plo  st_testst-testst.Po
ext/cudd-3.0.0/util/.deps/: cudd_libcudd_la-cpu_stats.Plo  cudd_libcudd_la-cpu_time.Plo  cudd_libcudd_la-cstringstream.Plo  cudd_libcudd_la-datalimit.Plo  cudd_libcudd_la-pathsearch.Plo  cudd_libcudd_la-pipefork.Plo  cudd_libcudd_la-prtime.Plo  cudd_libcudd_la-safe_mem.Plo  cudd_libcudd_la-strsav.Plo  cudd_libcudd_la-texpand.Plo  cudd_libcudd_la-ucbqsort.Plo
mat/: convert_symbolic_ctrls.nb  liblink_example.nb  store_retreive_text_data.nb  test_deterministic_ctrls.nb  test_symbolic_ctrls.nb
src/liblink/: CMakeLists.txt  scots2int.cc
src/optdet/: CMakeLists.txt  input_ctrl_data.hh  inputs_mgr.hh  scots_examples_helper.hh  scots_opt_det.hh  scots_split_det.cc  scots_to_svg.hh  space_tree_sco.hh  states_mgr.hh
src/wstp/: CMakeLists.txt  scots2.m  scots2ext.c  scots2ext.cc  scots2ext.tm
